--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <title>Happy Birthday</title>
 </head>
 <body>
+  <audio hidden autoplay loop>
+    <source src="happy birthday.mp3" type="audio/mpeg">Browsermu tidak mendukung tag audio
+  </audio>
   <div class="card">
     <img src="./birthday.svg" alt="birthday" class="birthday">
     <div class="text">
