--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Happy Birthday</title>
 </head>
 <body>
-  <audio hidden autoplay loop>
+  <audio controls autoplay loop>
     <source src="happy birthday.mp3" type="audio/mpeg">Browsermu tidak mendukung tag audio
   </audio>
   <div class="card">
