--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Happy Birthday</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
   <div class="card">
     <img src="./birthday.svg" alt="birthday" class="birthday">
     <div class="text">
-      <h1>Happy Birthday<br><a href="https://www.instagram.com/deneira_21/">Deneira Fabulan</a></h1>
+      <h1><i class="fa fa-birthday-cake" style="font-size:36px"></i><br>Happy Birthday<br><a href="https://www.instagram.com/deneira_21/">Deneira Fabulan</a></h1>
       <p>May All Your Dreams Come True<br>God Bless You</p>
       <p class="muted">-Your Friends-</p>
     </div>
